# deep_research_agent_v2

./: .env.example  .gitignore  DEEP_AGENT_DESIGN.md  README.md
frontend/src/app/login/: page.tsx
frontend/src/components/: backend-selector.tsx  engine-panel.tsx  nav-bar.tsx
frontend/src/components/pdf/: audit-section.tsx  deep-dives-section.tsx  sources-section.tsx  viral-events-section.tsx
frontend/src/hooks/: use-backend.ts  use-reports.ts
frontend/src/lib/: api.ts  auth.ts  backend.ts  report-utils.ts  types.ts
python-backend/: agent.py  pyproject.toml
python-backend/backend/config/: settings.py
python-backend/backend/repo/: sqlite_repo.py
python-backend/backend/runtime/: app.py  dependencies.py
python-backend/backend/service/: agent_runner.py  auth_service.py  report_parser.py  research_orchestrator.py
python-backend/backend/tests/repo/: test_sqlite_repo.py
python-backend/backend/tests/service/: test_auth_service.py  test_report_parser.py  test_research_orchestrator.py
python-backend/backend/tests/types/: test_enums.py  test_events.py  test_report.py
python-backend/backend/tests/ui/: test_health_routes.py
python-backend/backend/types/: enums.py  errors.py  events.py  report.py  requests.py
python-backend/backend/ui/: app_factory.py  auth_middleware.py  auth_routes.py  health_routes.py  report_routes.py  router.py
python-backend/research_agent/: __init__.py  prompts.py  tools.py
rust-backend/: Cargo.toml
rust-backend/src/: config.rs  main.rs  parser.rs
rust-backend/src/agents/: mod.rs  orchestrator.rs  prompts.rs  researcher_tool.rs  tavily_tool.rs
rust-backend/src/orchestration/: runner.rs
rust-backend/src/repo/: sqlite.rs
rust-backend/src/routes/: reports.rs
rust-backend/src/types/: enums.rs
rust-deepagent-backend/: Cargo.toml
rust-deepagent-backend/src/: config.rs  errors.rs  main.rs  parser.rs
rust-deepagent-backend/src/agents/: hooks.rs  mod.rs  orchestrator.rs  prompts.rs  researcher.rs  tavily_tool.rs
rust-deepagent-backend/src/auth/: middleware.rs
rust-deepagent-backend/src/orchestration/: runner.rs
rust-deepagent-backend/src/routes/: reports.rs
rust-deepagent-backend/src/types/: events.rs
