[project]
name = "deep-research-agent-v2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.4",
    "langgraph>=0.5.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.1",
    "PyJWT>=2.10.0",
    "aiosqlite>=0.21.0",
    "tavily-python>=0.5.0",
    "httpx>=0.28.1",
    "markdownify>=0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
include = ["backend*", "research_agent*"]

[tool.ruff]
line-length = 100
