[package]
name = "deep-research-agent-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.31"
tavily = "2.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
thiserror = "2"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
